--- a/Checkpoint.html
+++ b/Checkpoint.html
@@ -3,7 +3,7 @@
     <header style="background-color:#a0a6b1;">
         <title >My First Portfolio website</title>
         <a name="resume"></a>
-        <link rel="icon" href="C:\Users\USER\Downloads/www.ico">
+        <link rel="icon" href="res/www.ico">
         <h1><b>My First Portfolio website</b></h1>
        <ol type="I">
            <li><a href="#home"><b>Home</b></a></li>
@@ -49,7 +49,7 @@
                     width =350
                     height="280"
                     src="https://www.youtube.com/watch?v=J2cLlwVPC94"></iframe>
-                <img src="C:\Users\USER\Downloads/téléchargement.jpg" width="250" height="250" >
+                <img src="res/téléchargement.jpg" width="250" height="250" >
                 <p>I am very excited to start this training in web developmen
                      , I hope to learn everything <br>there is to know as quickly as possible ,
                       so I could create my own siteswebs <br> and my professional project for the 
@@ -59,7 +59,7 @@
             
             <p>
             </p>
-            <img src="C:\Users\USER\Downloads/Webdevelopement.jpg" alt = webdevelopement> 
+            <img src="res/Webdevelopement.jpg" alt = webdevelopement> 
         </section>
         <section>
             <h1>Resume</h1>
@@ -78,9 +78,9 @@
         <p> So you can join me on the  different platform
         </p>
         <figcaption>raouf.wassim@yahoo.com</figcaption>
-        <img src="C:\Users\USER\Downloads/yahoo.jpg" width="50" height="50" />
+        <img src="res/yahoo.jpg" width="50" height="50" />
         <figcaption>rbtj6</figcaption>
-        <img src="C:\Users\USER\Downloads/snapchat.jpg" width="50" height="50">
+        <img src="res/snapchat.jpg" width="50" height="50">
         <p>n°:0557692411</p>
     </footer>
 </html>
